@@ -1,3 +1,8 @@
+2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 
+
+	* Monodoc.Editor.Utils/EcmaReader.cs: Minor changes to deal with
+	  compiler warnings.
+
 2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added more comments to
